--- a/src/assets/styles/cmps/_board-header.scss
+++ b/src/assets/styles/cmps/_board-header.scss
@@ -33,5 +33,11 @@
     display: flex;
     gap: 10px;
     // align-items: center;
+
+    .dashboard-btn {
+      &.menu-open {
+        transform: translateX(-170%);
+      }
+    }
   }
 }
